$Id: History,v 1.49 2002-11-08 18:29:24 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 8, 2002, J.Allison
- Implemented default Show/DrawTrajectory in G4VTrajectory.
- Augmented GetAttDefs and CreateAttValues in G4(Smooth)Trajectory(Point).

Nov 07, 2002, T,Sasaki (tracking-V04-01-07)
- Fix for the problem with optical processes
Nov 05, 2002, T,Sasaki (tracking-V04-01-06)
- clean up G4SteppingManager.hh and G4VSterppinVerbose.cc

Nov 05, 2002, M.Asai (tracking-V04-01-05)
- tagged.

Nov 05, 2002, J.Generowicz
- Renamed aTrajectory(Point)Allocator to aSmoothTrajectory(Point)Allocator
  in the SmoothTrajectory(Point) classes.

Nov 01, 2002, M.Asai (tracking-V04-01-04)
- Merge tracking-V04-01-03 and tracking-V04-01-02.

Nov 1, 2002, J.Allison  (tracking-V04-01-03 - does not include V04-01-02)
- Canonical tag of traj03 (see below).

Oct 31, 02 T. Sasaki (tracking-V04-01-02)
- G4SteppingManager.hh/cc
 o new ForceCondition flag StronglyForced was implemented

Oct 28, 2002, J.Allison  (traj03)
- Changed GetAttDefs return signature to map.
- Changed GetAttValues to CreateAttValues.
- Improved descriptions.

Oct 24, 02 J.Allison (traj02)
- Implemented simple versions of G4Trajectory::GetAttDefs/Values.
