@@ -1,4 +1,4 @@
-$Id: History,v 1.49 2002-11-08 18:29:24 johna Exp $
+$Id: History,v 1.50 2002-11-08 23:44:34 jacek Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,8 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Nov 8, 2002 J.Generowicz
+- Bodies introduced into SmoothTrajectory(Point) classes 
 
 Nov 8, 2002, J.Allison
 - Implemented default Show/DrawTrajectory in G4VTrajectory.
